// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityStartDiscussionComponent should show community start discussion 1`] = `
<pf-community-start-discussion
  postType="0"
  store={[Function Store]}
  submittingCommunityPost$={[Function Store]}
>
  <div
    class="start-discussion-container mb-3"
  >
    <div
      class="start-discussion-header"
    >
      <ul
        class="mb-0"
      >
        <li
          class="px-4"
        >
          <a>
            Start a Discussion
          </a>
        </li>
        <li
          class="px-4"
        >
          <a>
            Ask a Question
          </a>
        </li>
        <li
          class="px-4"
        >
          <a>
            Post a Job
          </a>
        </li>
      </ul>
    </div>
    <div
      class="start-discussion-body p-2"
    >
      <img
        alt="avatar"
        class="pf-avatar ml-1"
        id="discussion-avatar"
        src="assets/images/placeholderphoto.jpg"
      />
      <div
        class="w-100 pl-3"
      >
        
        
        <div
          class="ml-3 p-0"
        >
          <button
            class="btn btn-primary float-right"
            id="start-discussion-post-button"
          >
            Post 
            
          </button>
        </div>
      </div>
    </div>
  </div>
</pf-community-start-discussion>
`;

exports[`CommunityStartDiscussionComponent should show community start poll 1`] = `
<pf-community-start-discussion
  postType={[Function Number]}
  store={[Function Store]}
  submittingCommunityPost$={[Function Store]}
>
  <div
    class="start-discussion-container mb-3"
  >
    <div
      class="start-discussion-header"
    >
      <ul
        class="mb-0"
      >
        <li
          class="px-4"
        >
          <a>
            Start a Discussion
          </a>
        </li>
        <li
          class="px-4"
        >
          <a>
            Ask a Question
          </a>
        </li>
        <li
          class="px-4"
        >
          <a>
            Post a Job
          </a>
        </li>
      </ul>
    </div>
    <div
      class="start-discussion-body p-2"
    >
      <img
        alt="avatar"
        class="pf-avatar ml-1"
        id="discussion-avatar"
        src="assets/images/placeholderphoto.jpg"
      />
      <div
        class="w-100 pl-3"
      >
        
        
        <div
          class="ml-3 p-0"
        >
          <button
            class="btn btn-primary float-right"
            id="start-discussion-post-button"
          >
            Post 
            
          </button>
        </div>
      </div>
    </div>
  </div>
</pf-community-start-discussion>
`;
